RESOLVED FIXED230122
[Mac Catalyst] Korean characters do not combine correctly in editable fields in WKWebView
https://bugs.webkit.org/show_bug.cgi?id=230122
Summary [Mac Catalyst] Korean characters do not combine correctly in editable fields ...
Wenson Hsieh
Reported 2021-09-09 13:43:50 PDT
Attachments
Patch (9.52 KB, patch)
2021-09-09 14:16 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2021-09-09 14:16:46 PDT
Devin Rousso
Comment 2 2021-09-09 14:59:38 PDT
Comment on attachment 437784 [details] Patch r=me, lol `Lenght` :P
EWS
Comment 3 2021-09-09 17:15:54 PDT
Committed r282247 (241529@main): <https://commits.webkit.org/241529@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437784 [details].
Note You need to log in before you can comment on or make changes to this bug.